@@ -1,8 +1,6 @@
-# JFree / JavaFX Demos 
-This project contains demo applications for JavaFX that use the libraries created by JFree.org.
+# Orson Charts FX Demo 
+This project contains a JavaFX demo application for Orson Charts.
 
-* [JFreeChart FX](https://github.com/jfree/jfreechart-fx) 
-* [FXGraphics2D](https://github.com/jfree/fxgraphics2d) 
 * [Orson Charts FX](https://github.com/jfree/orson-charts-fx) 
 
 ![Orson Charts sample](http://www.object-refinery.com/orsoncharts/images/orsoncharts_fx.png)
@@ -10,3 +8,9 @@ This project contains demo applications for JavaFX that use the libraries create
 To run the demo:
 
     mvn javafx:run
+
+or:
+
+    export PATH_TO_FX=path/to/javafx-sdk-15/lib
+    java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.graphics,javafx.web -jar org.jfree.chart3d.fx.demos-1.0-jar-with-dependencies.jar
+
